--- a/sakinah_app/pubspec.yaml
+++ b/sakinah_app/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  get: ^4.7.2
+  http: ^1.3.0
+  pinput: ^5.0.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
