--- a/sakinah_app/pubspec.yaml
+++ b/sakinah_app/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   http: ^1.3.0
   pinput: ^5.0.1
   google_fonts: ^6.2.1
+  firebase_core: ^3.12.1
+  cloud_firestore: ^5.6.5
+  firebase_auth: ^5.5.1
+  tcard: ^1.3.5
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
