--- a/sakinah_app/pubspec.yaml
+++ b/sakinah_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^5.5.1
   tcard: ^1.3.5
   image_picker: ^1.1.2
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
